grammar.bnf
; Copyright (c) MURANGWA Pacifique. and affiliates.
; This source code is licensed under the MIT license found in the
; LICENSE file in the root directory of this source tree.
;
; Kin Programming Language grammar (BNF)
;
; Source of truth: the implementation
;   lexer  — src/lexer/lexer.ts, src/lexer/tokens.ts
;   parser — src/parser/parser.ts
;
; This file describes what the parser actually accepts, including
; implementation limits. Comments starting with "Note:" document those
; limits. Tokens that the lexer produces but the parser never uses
; (++ -- & lone | ') are listed under Unused tokens and are not part
; of the language.

; ========================================
; Program
; ========================================

program ::= statement*

; ========================================
; Statements
; ========================================

statement ::= variableDeclaration
            | functionDeclaration
            | loopStatement
            | breakStatement
            | continueStatement
            | ifStatement
            | switchStatement
            | returnStatement
            | expressionStatement

; Semicolon is required only when the initializer is omitted.
; Constants (ntahinduka) must have an initializer — the parser rejects
; "ntahinduka name ;".
;
; Optional type annotation after the name enables runtime type checks for
; that binding (declare + reassign) when type safety is on or strict.
; Unannotated bindings stay dynamic under `on`; under `strict` they error.
; Required types reject ubusa; optional types (`type?`) accept ubusa.
;
; Annotation names: number string boolean object urutonde fn native-fn
; Note: ubwoko still reports runtime tags "fn" vs "native-fn"; annotations
; treat both as `fn` (and accept `native-fn` as a synonym of `fn`).
variableDeclaration ::= "reka" identifier typeAnnotation? (";" | "=" expression)
                      | "ntahinduka" identifier typeAnnotation? "=" expression

typeAnnotation ::= ":" typeName "?"?
typeName       ::= "number" | "string" | "boolean" | "object"
                 | "urutonde" | "fn" | "native-fn"

; Type-safety control (not a statement — a special comment or host flag):
;   # kin-types: on      default; check annotated bindings only
;   # kin-types: off     disable type checks (ignore annotations)
;   # kin-types: strict  every reka/ntahinduka needs an annotation
; Precedence: CLI --types > this directive > env KIN_TYPES > on

functionDeclaration ::= "porogaramu_ntoya" identifier "(" parameterList? ")" block

parameterList ::= identifier ("," identifier)*

block ::= "{" statement* "}"

loopStatement ::= "subiramo_niba" "(" expression ")" block

; Semicolon after hagarara / komeza is optional.
breakStatement    ::= "hagarara" ";"?
continueStatement ::= "komeza" ";"?

; nanone_niba may repeat (parser recurses). niba_byanze is optional and last.
ifStatement ::= "niba" "(" expression ")" block
                ("nanone_niba" "(" expression ")" block)*
                ("niba_byanze" block)?

; Determinant and each case label are primaryExpression only (not a
; full expression). Each case is desugared to (determinant == label).
;
; A switch whose only arm is ibindi runs the default body unconditionally.
switchStatement ::= "gereranya" "(" primaryExpression ")" "{"
                      caseClause*
                      defaultClause?
                    "}"

caseClause    ::= "usanze" primaryExpression ":" statement*
defaultClause ::= "ibindi" ":" statement*

; Empty return requires a semicolon. A return with a value does not.
returnStatement ::= "tanga" ";"
                  | "tanga" expression

; No required semicolon. Newlines are not statement terminators;
; the next token starts the next statement.
expressionStatement ::= expression

; ========================================
; Expressions  (low → high precedence)
; ========================================

expression ::= assignmentExpression

; Right-associative.
assignmentExpression ::= logicalExpression ("=" assignmentExpression)?

; && and || share a single precedence and are left-associative.
logicalExpression ::= relationalExpression (("&&" | "||") relationalExpression)*

; Note: at most one relational operator. They do not chain:
;  a < b < c  is not one comparison.
relationalExpression ::= additiveExpression (relationalOperator additiveExpression)?

relationalOperator ::= "<" | ">" | "==" | "!=" | "<=" | ">="

additiveExpression ::= multiplicativeExpression (additiveOperator multiplicativeExpression)*

additiveOperator ::= "+" | "-"

; * / % are left-associative. ^ is higher and right-associative.
multiplicativeExpression ::= exponentExpression (("*" | "/" | "%") exponentExpression)*

; Right-associative: 2 ^ 3 ^ 2  =>  2 ^ (3 ^ 2)
exponentExpression ::= callMemberExpression ("^" exponentExpression)?

; member then zero or more argument lists:  obj.fn()()
; Note: a call cannot be followed by further member access.
;   obj.method()     ok
;   foo()()          ok
;   foo().bar        not accepted
callMemberExpression ::= memberExpression ("(" argumentList? ")")*

argumentList ::= assignmentExpression ("," assignmentExpression)*

memberExpression ::= primaryExpression memberSuffix*

memberSuffix ::= "." identifier
               | "[" expression "]"

; Array and object literals are primaries so they accept postfix
; member / call chains: [1, 2, 3][0], {izina: "K"}.izina
primaryExpression ::= identifier
                    | numericLiteral
                    | stringLiteral
                    | arrayLiteral
                    | objectLiteral
                    | "(" expression ")"
                    | unaryExpression

; ! and unary - apply to a primary expression.
unaryExpression ::= ("!" | "-") primaryExpression

; Keys are identifiers only (not string literals).
; Shorthand { key } looks up `key` in the current environment at runtime.
; A trailing comma is accepted.
objectLiteral ::= "{" (objectProperty ("," objectProperty)* ","?)? "}"

objectProperty ::= identifier (":" expression)?

; A trailing comma is accepted. Arrays evaluate to ArrayVal (not objects).
arrayLiteral ::= "[" (expression ("," expression)* ","?)? "]"

; ========================================
; Operator semantics (runtime)
; ========================================
;
; + on two numbers: arithmetic add
; + on two strings: concatenation
; + on string and number: coerce the number to string and concatenate
; < > <= >= on two strings: locale-independent (UTF-16) comparison
; Other type combinations for arithmetic / comparison raise a KinError
;
; Truthiness (niba, niba_byanze chains, subiramo_niba):
;   false:  sibyo, ubusa, and the number 0
;   true:   everything else (including empty strings and empty arrays)

; ========================================
; Lexical
; ========================================

; # comments run to end of line and are discarded by the lexer.
comment ::= "#" { anyCharacterExceptNewline }

; Whitespace (space, tab, CR, LF) is insignificant.

identifier ::= (letter | "_") (letter | digit | "_")*

letter ::= "a"..."z" | "A"..."Z"
digit  ::= "0"..."9"

; Numbers are always non-negative in the lexer. Unary minus is a
; separate expression, so:
;  -5   is unaryMinus applied to 5
;  -x   is unaryMinus applied to x
;  x -5 is subtraction (x minus 5)
numericLiteral ::= digit+ ("." digit+)?

; Double quotes only. Newlines inside a string are a lexer error.
; No escape sequences are processed.
stringLiteral ::= '"' { anyCharacterExceptQuoteOrNewline } '"'

; ========================================
; Keywords
; ========================================
;
; reka  ntahinduka  porogaramu_ntoya  tanga
; subiramo_niba  hagarara  komeza
; niba  nanone_niba  niba_byanze
; gereranya  usanze  ibindi

; ========================================
; Unused tokens  (lexer only — not in this grammar)
; ========================================
;
; ++  --     tokenized (INCREMENT / DECREMENT), never parsed
; &          tokenized (AMPERSAND), never parsed  (&& is AND and is used)
; |          lexer error unless it is part of ||
; '          not recognized; strings use " only
; ?          used only as optional-type marker after a type name
